new changes in fe
new changes

--- a/stage1-signup/src/app/app.component.html
+++ b/stage1-signup/src/app/app.component.html
@@ -1,2 +1,4 @@
 
-<app-signup></app-signup>
+<a routerLink="signup">SignUp</a>&nbsp;&nbsp;
+<a routerLink="'forgotten-pw'">Forgotten Password</a>&nbsp;&nbsp;
+<router-outlet></router-outlet>
