--- a/stage1-signup/src/app/app-admin/signup/signup.component.html
+++ b/stage1-signup/src/app/app-admin/signup/signup.component.html
@@ -45,6 +45,6 @@
         {{strongCheckMessage}}
     </span>
     <br>
-    <input type="submit" value="Submit"/>
+    <input type="submit" [disabled] = >
 </form>
 
