--- a/stage1-signup/src/app/app-admin/forgotten-password/forgotten-password.component.html
+++ b/stage1-signup/src/app/app-admin/forgotten-password/forgotten-password.component.html
@@ -1,4 +1,6 @@
-<form[formGroup] = "form" (ngSubmit)="onSubmit">
+
+
+<form[formGroup] = "form" (ngSubmit)="onSubmit" *ngIf="status">
 enter your email address to reset your password:
 <input type = "email" formControlName="email" />
 <span *ngIf="email?.touched && email?.errors?.['required']" class="error">
